<resources>
    <string name="app_name">WanAndroidClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="openapis">OPENAPIS</string>
    <string name="tool">工具</string>
</resources>
