<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@mipmap/home"
            android:title="@string/home"></item>
        <item
            android:icon="@mipmap/system"
            android:title="@string/system"></item>
        <item
            android:icon="@mipmap/navigation"
            android:title="@string/navigation"></item>
        <item
            android:icon="@mipmap/project"
            android:title="@string/project"></item>
        <item
            android:icon="@mipmap/openapis"
            android:title="@string/openapis"></item>
        <item
            android:icon="@mipmap/tool"
            android:title="@string/tool"></item>
    </group>
</menu>